...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="androidx.navigation.fragment.NavHostFragment"
    tools:context=".FragmentAddNewsgroup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/simple_spinner_dropdown_item"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-39dp">

...
            android:background="@drawable/icon_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/newsgroups_List"
            android:layout_width="201dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:spinnerMode="dropdown"
...
